New demo notebook

--- a/api/demos/demo-notebook.ipynb
+++ b/api/demos/demo-notebook.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "'0.22.0'"
+       "'0.14.1'"
       ]
      },
      "execution_count": 2,
@@ -58,14 +58,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use the AoU Python client library to query data, rather than hitting BigQuery directly."
+    "We will use the AoU Python client library to query data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'aou_workbench_client'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-12a96c413c04>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0maou_workbench_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mswagger_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mResultFilters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMaterializeCohortRequest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCohortStatus\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0maou_workbench_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mswagger_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTableQuery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mColumnFilter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mOperator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFieldSet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAnnotationQuery\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0maou_workbench_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcohorts\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmaterialize_cohort\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0maou_workbench_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcdr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mObservation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMeasurement\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mConcept\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'aou_workbench_client'"
+     ]
+    }
+   ],
    "source": [
     "from aou_workbench_client.swagger_client.models import ResultFilters, MaterializeCohortRequest, CohortStatus\n",
     "from aou_workbench_client.swagger_client.models import TableQuery, ColumnFilter, Operator, FieldSet, AnnotationQuery\n",
@@ -92,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -123,17 +135,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -280,7 +292,7 @@
        "17  value_source_value             string     The source value associated with the content of the value_as_number or value_as_concept_id as stored in the source data.                                                                                                                                                                                                        "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
@@ -375,10 +387,10 @@
     {
      "data": {
       "text/plain": [
-       "<generator object materialize_cohort at 0x7f876e3ade58>"
+       "<generator object materialize_cohort at 0x7f8950038438>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +426,7 @@
        "(1000, 6)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,24 +437,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -566,7 +578,7 @@
        "9  2011-03-28       101687873       Temper                   198        C                 36.83          "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,6 +883,27 @@
    ],
    "source": [
     "Person.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ResultFilters' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-91a10dae6163>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mResultFilters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'ResultFilters' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "ResultFilters"
    ]
   },
   {
