[risk=no] Fix missing PERSON_TABLE reference

--- a/api/demos/Import a Cohort.ipynb
+++ b/api/demos/Import a Cohort.ipynb
@@ -1088,7 +1088,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cohort_gender_race_age = TableQuery(table_name=PERSON_TABLE,\n",
+    "cohort_gender_race_age = TableQuery(table_name=Person.table_name,\n",
     "                          columns= [Person.person_id, Person.gender_source_value, Person.race_source_value, Person.birth_datetime])"
    ]
   },
